--- a/index.html
+++ b/index.html
@@ -82,10 +82,30 @@
         <hr>
         <hr>
         <li>
+            <p>7. Запросить у пользователя число и на сколько цифр его сдвинуть. Сдвинуть цифры числа и вывести
+                результат (если число
+                123456 сдвинуть на 2 цифры, то получится 345612).</p>
+            <a href="#" onclick="task7(event)">Ввести</a>
+            <br>
+            <br>
+        </li>
+        <hr>
+        <hr>
+        <li>
             <p> 8. Зациклить вывод дней недели таким образом: «День недели. Хотите увидеть следующий день?» и так до тех
                 пор, пока
                 пользователь нажимает OK.</p>
             <a href="#" onclick="task8(event)">Начать цикл</a>
+            <br>
+            <br>
+        </li>
+        <hr>
+        <hr>
+        <li>
+            <p> 9. Вывести таблицу умножения для всех чисел от 2 до 9. Каждое число необходимо умножить на числа от 1 до
+                10.</p>
+            <a href="#" onclick="task9(event)">Вывести</a><br>
+            <span id="result9"></span>
             <br>
             <br>
         </li>
